feat(login): login route implementation
Creation of login route using jwt tokens and cookies
Setup of a soft shutdown of the server in the app.go file
